--- a/websitetask.html
+++ b/websitetask.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="consectetur">
+        <div class="nav">
 <ul>
     <li style="font-size: 20px;">Fisrt</li>
 <span>
@@ -19,6 +20,7 @@
     <li><i class="fa-solid fa-phone-volume"></i></li>
     <button>120-240-9600</button>
 </span>
+</div>
 <div class="hero-container">
     <div class="hero-left">
         <div class="sub-hero-container">
@@ -52,7 +54,7 @@
 <section class="info-container">
     <div class="info-left">
         <div class="info-para">
-            <h1>Information</h1>
+            <h1 style="text-align: center; text-decoration: none;">Information</h1>
         </div>
         <div class="info-para-1">
             <p>Name</p>
@@ -70,21 +72,21 @@
     <div class="info-right">
         <div>
             <div class="info-right-head">
-                <h1>20+</h1>
+                <h1 style="text-decoration: none;">20+</h1>
                 <p>Years of Experiences</p>
             </div>
             <div class="info-right-head" id="for-margin">
-                <h1>640</h1>
+                <h1 style="text-decoration: none;">640</h1>
                 <p>Project Finished</p>
             </div>
         </div>
         <div>
             <div class="info-right-head">
-                <h1>245</h1>
+                <h1 style="text-decoration: none;">245</h1>
                 <p>Happy Customers</p>
             </div>
             <div class="info-right-head"  id="for-margin-1">
-                <h1>72+</h1>
+                <h1 style="text-decoration: none;">72+</h1>
                 <p>Digital Awards</p>
             </div>
         </div>
@@ -98,16 +100,17 @@
     <br>
     <br>
 <div class="text">
-<h1>Companies I'v had worked</h1>
+<h1  style="text-decoration: none;">Companies I'v had worked</h1>
 </div>
 <br>
 <br>
 <br>
 <div class="icon">
-<li><i class="fa-solid fa-house"></i></li>
-<li><i class="fa-solid fa-share-from-square"></i></li>
-<li><i class="fa-solid fa-book"></i></li>
-<li><i class="fa-solid fa-tag"></i></li>
+    <img src="./first.png">
+    <img src="./2nd.png">
+    <img src="./third.png">
+    <img src="./five.png">
+    <img src="./four.png">
 </div>
 </div>
 <br>
@@ -128,7 +131,7 @@
 </div>
 <div class="cards1">
 <div class="Websites">
-<h1>Websites</h1>\
+<h1>Websites</h1>
 <br>
 <br>
 <br>
@@ -193,22 +196,22 @@
 </div>
 <div class="pictures">
 <div class="zoik-agency">
-    <p style="color: #14B789; margin-top: 20px;width: 100px;">BRANDING</p>
+    <p style="margin-top: 20px;width: 100px;">BRANDING</p>
 <h1 style="text-align: left; text-decoration: none;">zoik agency</h1>
 <br>
-<img style="width: 150px; border-radius: 20px; height: 200px;" src="./Zoik.jpg">
+<img style="width: 150px; border-radius: 20px; height: 200px;transform:" src="./Zoik.jpg">
 </div>
 <div class="Photography">
-    <p style="color: #14B789; margin-top: 20px;width: 100px;">Photography</p>
+    <p style="margin-top: 20px;width: 100px;">Photography</p>
 <h1 style="text-align: left; text-decoration: none;">The Watch</h1>
 <br>
 <img style="width: 150px; border-radius: 20px; height: 200px;" src="./white-desk-work-study-aesthetics.jpg">
 </div>
 <div class="Polo">
-    <p style="color: #14B789; margin-top: 20px;width: 100px;">Website</p>
+    <p style="margin-top: 20px;width: 100px;">Website</p>
 <h1 style="text-align: left; text-decoration: none;">Polo</h1>
 <br>
-<img style="width: 150px; border-radius: 20px; height: 200px;" src="./true-agency-9Bjog5FZ-oc-unsplash.jpg">
+<img style="width: 150px; border-radius: 20px; height: 200px; " src="./true-agency-9Bjog5FZ-oc-unsplash.jpg">
 </div>
 </div>
 <div class="say">
